k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-demo
  labels:
    app: cloud-demo
